fixed the image and header alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+/* body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-}
+} */
